--- a/application.yml
+++ b/application.yml
@@ -1,11 +1,11 @@
 # spring:
 #  appliaction:
 #   name: Config-Default
-# eureka:
-#  instance:
-#   prefer-ip-address: true
-#  client:
-#   fetch-registry: true
-#   register-with-eureka: true
-#   service-url:
-#    defaultZone: http://localhost:8761/eureka
+eureka:
+ instance:
+  prefer-ip-address: true
+ client:
+  fetch-registry: true
+  register-with-eureka: true
+  service-url:
+   defaultZone: http://localhost:8761/eureka
