--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
-# spring:
-#  appliaction:
-#   name: Config-Default
+spring:
+ appliaction:
+  name: Config-Default
 eureka:
  instance:
   prefer-ip-address: true
